# ImagoRef-mobile

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
docs/: CONTRIBUTING.md  LICENSE  NOTICE.md  README.md
packs/: Info.plist.in
packs/android/: AndroidManifest.xml
packs/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
res/app-icon/: icon.icns
res/themes/imago/: theme.json
src/: main.cpp
src/managers/: AppState.cpp  AppState.h  BoardItemsModel.cpp  BoardItemsModel.h  BoardsListModel.cpp  BoardsListModel.h  CacheManager.cpp  CacheManager.h  ThemeManager.cpp  ThemeManager.h
src/qml/: Main.qml
src/qml/components/: AccountChip.qml  BackgroundDecor.qml  BoardCard.qml  CircularAvatar.qml
src/qml/pages/: BoardPage.qml  HomePage.qml
